Alignment needs work ... default functionality incomplete .. TODO: setup a new page with the correct alignment to avoid breaking this one any further.

--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,6 @@
 .dynamicView {
 
-    padding-top: 20px;
-    padding-bottom: 50px;
-    padding-left: 20px;
-    padding-right: 10px;
+    pading:auto;
 
     background: #f3f3f3;
 
@@ -20,6 +17,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 3px 3px;
     margin: 10px;
+   
 }
 
 .card-link {
@@ -45,22 +43,20 @@
 
 .content {
 
-    min-height: 100%;
-    height: 100%;
-    padding-top: 80px;
+	min-height: 100%;
+	height: 100%;
+	padding-top: 80px;
 }
 
 .statsCard {
     
     min-width: 350px;
     min-height: 250px;
-    max-width: 350px;
-    max-height: 250px;
+    max-width: auto;
+    max-height: auto;
+
     width: 100%;
     height: 100%;
-    padding: 10px;
-    margin-top: 0;
-    margin-bottom: 20px;
 }
 
 .statusBarWrapper {
@@ -69,17 +65,17 @@
 
     max-width: 300px;
     min-width: 150px;
-    width: 300px;
+    width: 100%;
 
     max-height: 30px;
     min-height: 20px;
-    height: 30px;
+    height: 100%;
 
     background-color: grey;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 3px 3px;
 
-    margin: 10px auto;
+    margin: 10px;
     padding: 0;
 }
 
@@ -106,10 +102,10 @@
 .statusBarCard {
    
     min-width: 350px;
-    min-height: 100px;
+    min-height: 110px;
 
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .cardImg {
@@ -134,14 +130,6 @@
 	float: left;
 }
 
-#eventOptionsPrompt {
-    max-height: 100%;
-    max-width: 100%;
-    padding-bottom: 20px;
-    padding-top: 2px;
-    padding-right: 5px;
-}
-
 
 #gotoAvailabilityCalendarCard {
 
@@ -159,7 +147,6 @@
     width: auto;
     height: auto;
 }
-
 
 
 #gotoMessagesCard {
@@ -191,91 +178,72 @@
 
 
 #clendarCard {
-    background: white;
-    max-width: 700px;
-    min-width: 450px;
-    max-height: 650px;
-    min-height: 450px;
+	
+	max-width: 700px;
+	min-width: 450px;
+	max-height: 650px;
+	min-height: 450px;
 
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-    border-radius: 3px 3px;
-    margin-left: 25px;
+	width: 100%;
+	height: 100%;
+
+	padding: 10px;
+	
+	margin: 10px;
 }
 
 
-#chartCard {
-    background: white;
-    max-width: 450px;
-    min-width: 350px;
-    max-height: 200px;
-    min-height: 100px;
+#monthDefaultStatsCard {
 
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-    border-radius: 3px 3px;
-    margin: 10px;
-}
+	max-width: auto;
+	min-width: 350px;
+	max-height: auto;
+	min-height: 250px;
 
-#pieChartCard {
-
-    background: white;
-    max-width: auto;
-    min-width: auto;
-    max-height: auto;
-    min-height: 250px;
-
-    width: 100%;
-    height: 100%;    
-    
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-    border-radius: 3px 3px;
-    
-    padding: 10px;
-
-    margin: 10px;
-
-    margin-right: 20px; 
-
-    float: right;
+	width: 100%;
+	margin: 10px;
 
 }
 
 #backCard {
 
 	min-width: 250px;
-	min-height: 250px;
+	min-height: 150px;
 
 	width: 100%;
 	height: 100%;
 
    padding: 0;
 	overflow: hidden;
+	float: left;
 
 }
 
 
 #dayViewBtn {
 
-    min-width: 200px;
-    min-height: 80px;
+    min-width: 180px;
+    min-height: 70px;
 
-    width: auto;
-    height: auto;
+    max-width: auto;
+    max-height: auto;
+
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
 }
 
 
 #deleteBtn {
 
-    min-width: 100px;
-    min-height: 80px;
+    min-width: 80px;
+    min-height: 70px;
+    max-width : 80px;
+    max-height: 70px;
 
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
 }
 
 #statsCardDefault {
@@ -285,5 +253,12 @@
 }
 
 
+#monthStatsDefaultImg {
 
+	max-width: auto;
+	min-width: 350px;
+	max-height: auto;
+	min-height: 250px; 
+	margin: 0;
+}
 
